add streamlit page

--- a/src/test.ipynb
+++ b/src/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,35 +16,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "_, _, test_dataloader = get_data_loaders(32)\n",
-    "model = CNN()\n",
-    "model.load_state_dict(torch.load(\"../models/CNN/CNN_1.pt\"))\n",
+    "model = CNN(15)\n",
+    "model.load_state_dict(torch.load(\"../models/cnn.pt\"))\n",
     "model.to(\"cuda\")\n",
     "loss_fn = nn.CrossEntropyLoss()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1.7589603996276855, 0.356)"
+       "(0.8508442179361979, 0.712)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "evaluate_model(model, test_dataloader, loss_fn, \"cuda:0\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Bean',\n",
+       " 'Bitter_Gourd',\n",
+       " 'Bottle_Gourd',\n",
+       " 'Brinjal',\n",
+       " 'Broccoli',\n",
+       " 'Cabbage',\n",
+       " 'Capsicum',\n",
+       " 'Carrot',\n",
+       " 'Cauliflower',\n",
+       " 'Cucumber',\n",
+       " 'Papaya',\n",
+       " 'Potato',\n",
+       " 'Pumpkin',\n",
+       " 'Radish',\n",
+       " 'Tomato']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_dataloader.dataset.classes"
    ]
   }
  ],
@@ -69,7 +103,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "7f05221b65377f389be65e271e884470fd1f206f0d59fef5a5310d62fcc09a4d"
+    "hash": "c55a81c10ddf66393adeb3fadc6a6d251f8ee8bd2472ec2f95cd10b64a1ac4dd"
    }
   }
  },
