add images and new page

--- a/src/test.ipynb
+++ b/src/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,11 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "_, _, test_dataloader = get_data_loaders(32)\n",
+    "_, _, test_dataloader = get_data_loaders(16)\n",
     "model = CNN(15)\n",
     "model.load_state_dict(torch.load(\"../models/cnn.pt\"))\n",
     "model.to(\"cuda\")\n",
@@ -29,56 +29,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(0.8508442179361979, 0.712)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.52      0.65      0.57       200\n",
+      "           1       0.69      0.79      0.74       200\n",
+      "           2       0.89      0.51      0.65       200\n",
+      "           3       0.47      0.73      0.57       200\n",
+      "           4       0.71      0.69      0.70       200\n",
+      "           5       0.61      0.69      0.65       200\n",
+      "           6       0.90      0.73      0.80       200\n",
+      "           7       0.93      0.93      0.93       200\n",
+      "           8       0.74      0.80      0.76       200\n",
+      "           9       0.61      0.54      0.57       200\n",
+      "          10       0.64      0.36      0.46       200\n",
+      "          11       0.83      0.82      0.83       200\n",
+      "          12       0.64      0.67      0.66       200\n",
+      "          13       0.83      0.86      0.84       200\n",
+      "          14       0.63      0.60      0.62       200\n",
+      "\n",
+      "    accuracy                           0.69      3000\n",
+      "   macro avg       0.71      0.69      0.69      3000\n",
+      "weighted avg       0.71      0.69      0.69      3000\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "evaluate_model(model, test_dataloader, loss_fn, \"cuda:0\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Bean',\n",
-       " 'Bitter_Gourd',\n",
-       " 'Bottle_Gourd',\n",
-       " 'Brinjal',\n",
-       " 'Broccoli',\n",
-       " 'Cabbage',\n",
-       " 'Capsicum',\n",
-       " 'Carrot',\n",
-       " 'Cauliflower',\n",
-       " 'Cucumber',\n",
-       " 'Papaya',\n",
-       " 'Potato',\n",
-       " 'Pumpkin',\n",
-       " 'Radish',\n",
-       " 'Tomato']"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_dataloader.dataset.classes"
+    "from sklearn.metrics import confusion_matrix, classification_report\n",
+    "\n",
+    "preds = []\n",
+    "Y = []\n",
+    "\n",
+    "for x_batch, y_batch in test_dataloader:\n",
+    "\tx_batch, y_batch = x_batch.to(\"cuda\"), y_batch.to(\"cuda\")\n",
+    "\tpred = model(x_batch)\n",
+    "\tpreds.extend(torch.argmax(pred, dim=1).cpu().numpy())\n",
+    "\tY.extend(y_batch.cpu().numpy())\n",
+    " \n",
+    "print(classification_report(Y, preds))\n"
    ]
   }
  ],
